# cmake_starter_template

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  README_cmake_modules.md  README_references.md  README_usage.md  conanfile.py  conanfile.txt
.github/workflows/: auto-clang-format.yml  ci.yml
cmake/: AddTest.cmake  CustomizedGraphViz.cmake  CustomizedProjectOptions.cmake  GraphViz.cmake  MyGraphViz.cmake  MyProjectOptions.cmake  ProjectOptions.cmake  ProjectOptionsExtension.cmake  enable_customized_project_options.cmake  fetch_project_options.cmake
conan/profiles/: macos-12-clang-x86_64  macos-12-gcc-x86_64  ubuntu-22.04-clang-x86_64  ubuntu-22.04-gcc-x86_64  windows-2022-clang-x86_64  windows-2022-gcc-x86_64  windows-2022-msvc-x86_64
graphviz/dot/: main.dot  main.dot.GTestgtest.dependers  main.dot.GTestgtest_main  main.dot.GTestgtest_main.dependers  main.dot.app  main.dot.app_library  main.dot.app_library.dependers  main.dot.fmtfmt.dependers  main.dot.header_only_lib  main.dot.header_only_lib.dependers  main.dot.lib  main.dot.lib.dependers  main.dot.project_options.dependers  main.dot.project_warnings.dependers  main.dot.range-v3concepts  main.dot.range-v3concepts.dependers  main.dot.range-v3meta.dependers  main.dot.range-v3range-v3  main.dot.range-v3range-v3.dependers  main.dot.test_app_library  main.dot.test_app_library.dependers  main.dot.test_header_only_lib  main.dot.test_header_only_lib.dependers  main.dot.test_lib  main.dot.test_lib.dependers
my_app/: CMakeLists.txt
my_app/include/my_app/: make_args.hpp  my_app_main.hpp
my_app/src/: main.cpp  my_app_main.cpp
my_app/test/: concat.cpp
my_header_only_lib/test/: to_string.cpp
my_lib/test/: sort.cpp
script/: ClangFormat.cmake
src/: CMakeLists.txt
src/app/: CMakeLists.txt
src/app/include/: fibonacci.hpp
src/app/include/app/: concat.hpp  fibonacci.hpp
src/app/src/: boostrap.cpp  bootstrap.cpp  concat.cpp  fibonacci.cpp  main.cpp
src/app/test/: CMakeLists.txt  concat.cpp  fibonacci.pass.cpp
src/header_only_lib/: CMakeLists.txt
src/header_only_lib/include/header_only_lib/: to_string.hpp
src/header_only_lib/test/: CMakeLists.txt  to_string.cpp  to_string.pass.cpp
src/lib/: CMakeLists.txt
src/lib/include/lib/: sort.hpp
src/lib/src/: sort.cpp
src/lib/test/: CMakeLists.txt  sort.cpp  sort.pass.cpp
starter_app/: CMakeLists.txt
starter_app/include/starter_app/: concat.hpp  fibonacci.hpp
starter_app/src/: bootstrap.cpp  concat.cpp  fibonacci.cpp
starter_app/test/: CMakeLists.txt  concat.cpp  fibonacci.cpp
starter_header_only_lib/: CMakeLists.txt
starter_header_only_lib/include/starter_header_only_lib/: to_string.hpp
starter_header_only_lib/test/: CMakeLists.txt  to_string.cpp
starter_lib/: CMakeLists.txt
starter_lib/include/starter_lib/: sort.hpp
starter_lib/src/: sort.cpp
starter_lib/test/: CMakeLists.txt  sort.cpp  sort.pass.cpp
